<resources>

    <string name="app_name">NEXT</string>
    <string name="hello_world">Hello world!</string>
    <string name="me">Me</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">NEXT</string>
    <string name="TitleByTime_Today">Today</string>
    <string name="status_image">Status Image</string>
    
    <string name="TitleByTime_Next">Next</string>
    <string name="TitleByTime_InPlan">In plan</string>
    <string name="TitleByTime_Someday">Someday</string>
    <string name="TityleByTime_Blocked">Blocked</string><string name="TitleByContext">Contexts</string>
    <string name="TitleByContext_Home">Home</string>
    <string name="TitleByContext_Work">Work</string>
    <string name="TitleByContext_Freetime">Freetime</string>
    <string name="TitleByProject">Projects</string>
    <string name="TitleByProject_ShowProjects">Show Projects</string>
    <string name="SettingsConnectToDrive">Drive login</string>
    <string name="TaskTitle">Task title</string>
    <string name="TaskDateTitle">DATE</string>
    <string name="TaskProjectTitle">PROJECT</string>
    <string name="TaskContextTitle">CONTEXT</string>
    <string name="TaskPriorityTitle">PRIORITY</string>
    <string name="TaskDescriptionTitle">DESCRIPTION</string>
    <string name="TaskProjectTextAutoComplete">Fill name of project</string>
    <string name="TaskContextTextAutoComplete">Fill name of context</string>
    <string name="TaskDone">Done</string>
    <string name="TaskSwitch">Yes!</string>
    <string name="TaskSwitchWaiting">No</string>
    <string name="WipeDatabase">Wipe database</string>
    <string name="action_edit_task">Edit task</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete_task">Delete task</string>
    <string name="TaskIsCompletedTitle">COMPLETED</string>
    <string name="action_add_task">Add task</string>
    <string name="frag_title_next">Next tasks</string>
    <string name="frag_title_today">Today tasks</string>
    <string name="someday">Someday</string>
    <string name="projects">Projects</string>

    <string-array name="priorityArray">
        <item>No priority</item>
        <item>Low</item>
        <item>Normal</item>
        <item>High</item>
    </string-array>
    
    <string name="menuSyncNow">Sync Now</string>
    <string name="frag_title_someday">Someday tasks</string>
    <string name="project_share">Share project - DEPRECATED</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="all_done">All tasks completed!</string>
    <string name="show_all_projects">Show all projects</string>
    
    <string name="empty_history">History is empty</string>
    <string name="project_history">Project history</string>
    <string name="task_history">Task history</string>

    <string name="share_prompt">Google mail for new share</string>

    <string name="TaskTimeTitle">TIME</string>
    <string name="TaskSomeDay">Someday</string>
    <string name="TaskWholeDay">All day</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>

    <string name="implicit_project">&lt;No project&gt;</string>
    <string name="project_title">Project title</string>
    <string name="project_delete">Delete project</string>
    <string name="project_deleted">Project will been deleted from database in a minute</string>
    <string name="show_history">Show history</string>
    <string name="project_delete_confirm_msg">Do you really want to delete this project? All its tasks will be lost.</string>
    <string name="task_delete">Delete task</string>
    <string name="task_delete_confirm_msg">Do you really want to delete this task?</string>
    <string name="no_actions">No actions available</string>
    <string name="sync_in_progress">Synchronization in progress</string>
    <string name="settings">Settings</string>
    <string name="SettingsSynchronizationTitle">SYNCHRONIZATION</string>
    <string name="SettingsSynchronizationActiveTitle">Google Drive</string>
    <string name="SettingsSynchronizationWifiTitle">Sync only on Wi-Fi</string>
    <string name="SettingsSynchronizationWifiSummary">Don´t sync on mobile data connection</string>
    <string name="TaskCompleted">Completed</string>
    <string name="SettingsSynchronizationActiveSummary">Synchronization status</string>
    <string name="SettingsSynchronizationIntervalTitle">Interval</string>
    <string name="SettingsAppTitle">Application Settings</string>
    <string name="SettingsShowCompletedTasks">Show completed</string> 
    <string name="SettingsShowCompletedTasksSummary">Always show completed tasks</string> 
    
    <string name="history_title">title</string>
    <string name="history_priority">priority</string>
    <string name="history_context">context</string>
    <string name="history_date">date</string>
    <string name="history_description">description</string>
    <string name="task_created">TASK CREATED</string>
    <string name="task_completed">TASK MARKED AS COMPLETE</string>
    <string name="task_uncompleted">TASK MARKED AS UNCOMPLETE</string>
    <string name="task_deleted">TASK DELETED</string>
    <string name="deleted">deleted</string>
    <string name="delete_error">Error in project deletion, check your connection</string>

    
   	<string name="sharing">Sharing</string>
    <string name="sharing_no_shares">Loading shares ...</string>
    <string name="sharing_no_conection">There is no connection to Google Drive, unable to share.</string>
    <string name="sharing_unshare">Unshare</string>
    
    <string name="no_connection">No connection available.</string>
    <string name="no_wifi">No Wi-Fi connection available.</string>
    <string name="sync_error">NEXT: Something went wrong with synchronization :(</string>
    <string name="sharing_error">NEXT: Something went wrong with sharing, are you synchronized?</string>
    <string name="sharing_ok">NEXT: Project will be shared.</string>
    <string name="unsharing_ok">NEXT: Project will be unshared.</string>

    <string name="SettingsNotificationsTitle">Notifications</string>
    <string name="SettingsNotificationsEnable">Enable</string>
    <string name="SettingsNotificationsEnableSummary">Notify about upcoming tasks</string>
    <string name="SettingsNotificationsAlldayTime">All-day time</string>
    <string name="SettingsNotificationsAlldayTimeSummary">Time for All-day notifications</string>
    <string name="SettingsDesignTitle">Design</string>
    <string name="history_project">project</string>
    <string name="history_taskcreated">Task has been created</string>
    <string name="history_taskcompleted">Task has been marked as completed</string>
    <string name="history_taskuncompleted">Task has been marked as uncompleted</string>
    <string name="history_prechanged">Changed in&#160;</string>
    <string name="history_postchanged">&#160;and changed in&#160;</string>
    <string name="history_taskdeleted">Task has been deleted</string>
    <string name="connect_account">Click to connect your Drive account</string>
    <string name="no_account_connected">No account connected</string>
    <string name="change_connected_account">Click to change connected account</string>
 
    <string name="tutorial_project">Tutorial</string>

    <string name="tutorial_first_task">Hello! I am your first task. Click me!</string>
    <string name="tutorial_first_description">The most important information of every task is its title. It usually reminds you what to do. If that\'s not enough for you, you can always use additional description like the one you are reading now.\n\nMost of your tasks will also include some time information. You can use exact date and/or time, but you can also use "someday", which is useful for tasks you are going to do whenever you feel like it.</string>
    <string name="tutorial_categorize_tasks">Tasks can be assigned to Projects and Contexts</string>
    <string name="tutorial_share_project">You can share projects to cooperate with your friends and co-workers</string>
    <string name="tutorial_share_description">When synchronization is allowed (you can change that in Settings), all your projects are stored as HTML files on your Google Drive. You can view them, backup them or even take them with you when you think NEXT isn\'t good enough for you.\n\nBut the most powerful option is to share projects with your friends and co-workers. That way you can cooperate on the same tasks and all changes will be automatically synchronized!\nThere is also a history of changes for each project (use long touch in Projects screen) so you can keep up with the latest news.</string>
    <string name="tutorial_sidebar">There is a sidebar on the left - swipe to open it!</string>
    <string name="tutorial_rate_us">Rate NEXT on Google Play</string>
    <string name="tutorial_dark_skin">Also check out our Holo Dark theme in the Settings ;-)</string>
    
</resources>