<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory 
        android:title="@string/SettingsSynchronizationTitle"
        android:key="pref_key_synchro_setting">
        <SwitchPreference 
            android:key="PREF_SYNC_ENABLED"
            android:title="@string/SettingsSynchronizationActiveTitle"
            android:summary="@string/SettingsSynchronizationActiveSummary"
            android:defaultValue="false"
            android:switchTextOff="0"
            android:switchTextOn="I"
            />
         <SwitchPreference 
            android:key="PREF_SYNC_WIFI"
            android:title="@string/SettingsSynchronizationWifiTitle"
            android:summary="@string/SettingsSynchronizationWifiSummary"
            android:defaultValue="false"
            android:switchTextOff="0"
            android:switchTextOn="I"
            />
        <ListPreference
            android:key="PREF_SYNC_INTERVAL"
            android:title="@string/SettingsSynchronizationIntervalTitle"
            android:entries="@array/preferenceIntervalEntries"
            android:entryValues="@array/preferenceIntervalValuesIndex"
            android:defaultValue="3"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/SettingsAppTitle"
        android:key="pref_key_app_setting">
        <ListPreference 
            android:key="PREF_DESIGN"
            android:title="@string/SettingsDesignTitle"
            android:entries="@array/preferenceDesignEntries"
            android:entryValues="@array/preferenceDesignValuesIndex"
            android:defaultValue="1"
            />
    </PreferenceCategory>
</PreferenceScreen>