<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Next.Light.Sidebar"
    android:layout_width="wrap_content"
    android:layout_height="match_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:background="@color/FanBackgroundDark"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TitleByTime"
                style="@style/Next.Light.Sidebar.Title"
                android:text="@string/TitleByTime" />

            <LinearLayout
                style="@style/Next.Light.Sidebar.HorizontalLine"
            />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:clickable="true"
                android:orientation="vertical" >
                
                <TextView
                    android:id="@+id/Time_Next"
                    style="@style/Next.Light.Sidebar.Subtitle"
                    android:drawableLeft="@drawable/menu_next"
                    android:text="@string/TitleByTime_Next" />

                <TextView
                    android:id="@+id/Time_Today"
                    style="@style/Next.Light.Sidebar.Subtitle"
                    android:drawableLeft="@drawable/menu_today"
                    android:text="@string/TitleByTime_Today" />

                <TextView
                    android:id="@+id/Time_InPlan"
                    style="@style/Next.Light.Sidebar.Subtitle"
                    android:drawableLeft="@drawable/menu_inplan"
                    android:text="@string/TitleByTime_InPlan" />

                <TextView
                    android:id="@+id/Time_Someday"
                    style="@style/Next.Light.Sidebar.Subtitle"
                    android:drawableLeft="@drawable/menu_sometimes"
                    android:text="@string/TitleByTime_Someday" />

                <TextView
                    android:id="@+id/Time_Blocked"
                    style="@style/Next.Light.Sidebar.Subtitle"
                    android:drawableLeft="@drawable/menu_blocked"
                    android:text="@string/TityleByTime_Blocked"
                    android:visibility="gone" />

            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="10dp" >

            <LinearLayout
                android:id="@+id/ContextsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center|left"
                android:orientation="vertical" >
            </LinearLayout>

            <TextView
                android:id="@+id/TitleByContext"
                style="@style/Next.Light.Sidebar.Title"
                android:text="@string/TitleByContext" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@color/FanTitleColor"
                android:orientation="vertical" >
            </LinearLayout>
            
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/Next.Light.Sidebar.Title"
                android:id="@+id/TitleByProject"
                android:text="@string/TitleByProject"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@color/FanTitleColor"
                android:orientation="vertical" >
            </LinearLayout>

	<LinearLayout
                android:id="@+id/projectsAll"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="vertical" >

		<LinearLayout
                    android:id="@+id/projects"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.1"
                    android:orientation="vertical" >

                </LinearLayout>

				<TextView
                    android:id="@+id/Projects_ShowProjects"
                    style="@style/Next.Light.Sidebar.Subtitle"
                    android:layout_weight="0.1"
                    android:paddingLeft="@dimen/FanItemPaddingLeft"
                    android:text="@string/show_all_projects" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</ScrollView>