<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dip"
    android:layout_height="fill_parent"
    android:background="@color/FanBackgroundDark"
    android:clickable="true"
    android:focusable="true"
    android:onClick="unclick"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TitleByTime"
            android:textSize="@dimen/FanTitleSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingLeft="15dp" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:text="@string/TitleByTime_Next"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/FanItemsText"
                android:textSize="@dimen/FanItemTextSize" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/TitleByTime_Today"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/FanItemsText"
                android:textSize="@dimen/FanItemTextSize" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/TitleByTime_InPlan"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/FanItemsText"
                android:textSize="@dimen/FanItemTextSize" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/TitleByTime_Sometimes"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/FanItemsText"
                android:textSize="@dimen/FanItemTextSize" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/TityleByTime_Blocked"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/FanItemsText"
                android:textSize="@dimen/FanItemTextSize" />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center|left"
            android:orientation="vertical"
            android:paddingLeft="15dp" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/TitleByContext_Home"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/FanItemsText"
                android:textSize="@dimen/FanItemTextSize" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/TitleByContext_Work"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/FanItemsText"
                android:textSize="@dimen/FanItemTextSize" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/TitleByContext_Freetime"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/FanItemsText"
                android:textSize="@dimen/FanItemTextSize" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TitleByContext"
            android:textSize="@dimen/FanTitleSize" />

    </FrameLayout>

</LinearLayout>