<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="top"
    android:orientation="vertical"
    tools:context=".TaskDetailFragment" >

    <ScrollView
        android:id="@+id/scrollView"
		style="?taskScrollView" >

        <LinearLayout
            android:id="@+id/taskBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/titleLayout"
                style="?taskTitleLayoutEditFragment" >

                <EditText
                    android:id="@+id/titleTask"
                    style="?taskTitleEditFragment" />
            </LinearLayout>

            <LinearLayout style="?taskLineUnderTitle" />
           
            <LinearLayout
                android:id="@+id/taskIsCompletedLayout"
                style="?taskSubLayout" >

                <TextView
                    android:id="@+id/TextView01"
                    style="?capsText"
                    android:text="@string/TaskIsCompletedTitle" />

                <LinearLayout style="?taskLineSeparatorCategories" />

                <CheckBox style="?taskCompleted"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/taskDescriptionLayout"
                style="?taskSubLayout" >

                <TextView
                    android:id="@+id/TextView02"
                    style="?capsText"
                    android:text="@string/TaskDescriptionTitle"
                    />

                <LinearLayout style="?taskLineSeparatorCategories" />

                <EditText
                    android:id="@+id/editDescription"
                    style="?taskCategoriesText"
                    android:inputType="text"
                    android:hint="Fill some description" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/taskDateLayout"
                style="?taskSubLayout" >

                <TextView
                    android:id="@+id/taskDateTitle"
                    style="?capsText"
                    android:text="@string/TaskDateTitle" />

                <LinearLayout style="?taskLineSeparatorCategories" />

                <LinearLayout
                    android:id="@+id/LinearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/TaskSubBodyMarginLeft"
                    android:layout_marginRight="@dimen/TaskSubBodyMarginRight"
                    android:orientation="vertical" >

                    <Switch
                        android:id="@+id/somedaySwitch"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/TaskSomeDay"
                        android:textOff="0"
                        android:textOn="1" />

                    <LinearLayout
                        android:id="@+id/TaskSubBodyEditDateLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left|center"
                            android:text="@string/TaskDateTitle"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <EditText
                            android:id="@+id/editDate"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/TaskDateEditMarginLeft"
                            android:ems="10"
                            android:focusableInTouchMode="false"
                            android:gravity="center_vertical|center_horizontal"
                            android:inputType="date" />
                    </LinearLayout>

                    <Switch
                        android:id="@+id/wholeDaySwitch"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/TaskWholeDay"
                        android:textOff="0"
                        android:textOn="1" />

                    <LinearLayout
                        android:id="@+id/TaskSubBodyEditTimeLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left|center"
                            android:text="@string/TaskTimeTitle"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <EditText
                            android:id="@+id/editTime"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|center"
                            android:layout_marginLeft="@dimen/TaskDateEditMarginLeft"
                            android:ems="10"
                            android:focusableInTouchMode="false"
                            android:gravity="center_vertical|center_horizontal"
                            android:inputType="date" >

                            <requestFocus />
                        </EditText>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/taskProjectLayout"
                style="?taskSubLayout" >

                <TextView
                    android:id="@+id/taskProjectTitle"
                    style="?capsText"
                    android:text="@string/TaskProjectTitle" />

                <LinearLayout style="?taskLineSeparatorCategories" />

                <Spinner
                    android:id="@+id/spinnerProject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/TaskSubTitlePaddingLeft" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/taskContextLayout"
                style="?taskSubLayout" >

                <TextView
                    android:id="@+id/textContextTitle"
                    style="?capsText"
                    android:text="@string/TaskContextTitle" />

                <LinearLayout style="?taskLineSeparatorCategories" />

                <EditText
                    android:id="@+id/editContext"
                    style="?taskCategoriesText"
                    android:hint="Fill some context"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/taskImportantLayout"
                style="?taskSubLayout" >

                <TextView
                    android:id="@+id/textImportantTitle"
                    style="?capsText"
                    android:text="@string/TaskPriorityTitle"  />

                <LinearLayout style="?taskLineSeparatorCategories" />

                <RadioGroup
                    android:id="@+id/radioPriority"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/TaskSubtitleMarginBoth"
                    android:orientation="horizontal" >

                    <Spinner
                        android:id="@+id/spinnerPriority"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>